# conan-recipes

./: LICENSE.md  README.md
recipes/abseil/: CMakeLists.txt  conandata.yml  conanfile.py
recipes/antlr/: conandata.yml  conanfile.py
recipes/grpc/: conandata.yml  conanfile.py
recipes/grpc/patches/: conanize-cmakelists.patch
recipes/grpc_plugin/: CMakeLists.txt  conanfile.py
recipes/grpc_plugin/patches/: conanize-cmakelists.patch
recipes/protobuf_compiler/: conanfile.py
recipes/protoc_installer/: CMakeLists.txt  conandata.yml  conanfile.py
tests/abseil/: CMakeLists.txt  conanfile.txt  test1.cpp
tests/greeter_example/: CMakeLists.txt  README.md  conanfile.txt
